# natmri

./: $electron-builder.json  .eslintignore  .eslintrc  .gitignore  .ncurc.json  Cargo.toml  README.md  README_en.md  alias.ts  eevi.config.ts  electron-builder.json  electron.vite.config.ts  env.d.ts  eslint.config.js  package.json  pnpm-lock.yaml  taze.config.js  tsconfig.json  tsconfig.node.json  tsconfig.test.json  unocss.config.ts  vite.config.ts  vitest.config.ts
app/: package.json  pnpm-lock.yaml
rust/open-wallpaper-engine/: Cargo.toml
rust/open-wallpaper-engine/fixtures/2862745478/pkg/: scene.json
rust/open-wallpaper-engine/fixtures/2862745478/pkg/effects/foliagesway/: effect.json
rust/open-wallpaper-engine/fixtures/2862745478/pkg/effects/iris/: effect.json
rust/open-wallpaper-engine/fixtures/2862745478/pkg/effects/shake/: effect.json
rust/open-wallpaper-engine/fixtures/2862745478/pkg/effects/xray/: effect.json
rust/open-wallpaper-engine/fixtures/2862745478/pkg/materials/: 2.json  2.tex  3.json  4.json  4.tex  5.json  6.json  6.tex
rust/open-wallpaper-engine/fixtures/2862745478/pkg/materials/effects/: foliagesway.json  iris.json  shake.json  xray.json
rust/open-wallpaper-engine/fixtures/2862745478/pkg/models/: 2.json  2_puppet.mdl  3.json  4.json  4_puppet.mdl  5.json  6.json
rust/open-wallpaper-engine/fixtures/2862745478/pkg/presets/: leaves5.json
rust/open-wallpaper-engine/src/: lib.rs
rust/open-wallpaper-engine/src/app/: mod.rs
rust/open-wallpaper-engine/src/models/: mod.rs
rust/open-wallpaper-engine/src/parser/: mod.rs
src/: main.ts  (+5 more)
(+237 files in other folders)
